in main component, routes-container not fitting 100% bug fixed

--- a/src/pages/main/main.styles.scss
+++ b/src/pages/main/main.styles.scss
@@ -3,6 +3,10 @@
 .main-component {
   width: 80%;
   position: relative;
+
+  &__routes-container {
+    height: 100%;
+  }
 }
 
 @media (max-width: 768px) {
